--- a/recommendation-service/src/main/resources/db/changelog.yml
+++ b/recommendation-service/src/main/resources/db/changelog.yml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: recommendation-1
+      id: ${SCHEMA}_1
       author: tunepoint
       changes:
         - sqlFile:
